force-app/main/default/objects/TR1__Agreement__c/fields/BH_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>BH_Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Agreements (Billing Contact)</relationshipLabel>
    <relationshipName>Customer_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>