force-app/main/default/objects/TR1__Agreement__c/fields/BH_End_Date__c.field-meta.xml
<CustomField>
    <fullName>BH_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>