force-app/main/default/objects/TR1__Agreement__c/fields/BH_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>BH_Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>